Reorganized Projects and Created 'odin-links-and-images'

--- a/exploring_HTML5/index.html
+++ b/exploring_HTML5/index.html
@@ -14,5 +14,16 @@
         molestiae quia molestias laborum,<em>ullam aliquid ad doloribus quos numquam natus? Labore, voluptas
                 aut</em>.</p>
     <h6>Small Heading just cause I can</h6>
+    <ol>
+        <li>first list item</li>
+        <li>second list item</li>
+        <li>third list item</li>
+    </ol>
+    <ul>
+        <li>unordered list item 1</li>
+        <li>unordered list item 2</li>
+        <li>unordered list item 3</li>
+
+    </ul>
 </body>
 </html>
